<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:padding="25dp	"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Text" >

    <EditText
        android:id="@+id/etCommands"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_a_command"
        android:password="true" />

    <LinearLayout
        android:id="@+id/cli"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCommands"
        android:layout_below="@+id/etCommands"
        android:layout_marginTop="42dp"
        android:weightSum="100" >
		
		<Button
		    android:layout_weight="50"
	        android:id="@+id/bCommand"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/etCommands"
	        android:text="@string/button" />
        <ToggleButton
		    android:layout_weight="50"
            android:id="@+id/tbPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:text="ToggleButton" 
            android:paddingTop="5dp"
            android:checked="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/etTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cli"
        android:layout_centerHorizontal="true"
        android:text="@string/textview" />

</RelativeLayout>